Closed Bug 1558112 Opened 5 years ago Closed 5 years ago

LSNG: Connection::FlushOp::DoDatastoreWork needs to automatically detach the shadow database on an error

Categories

(Core :: Storage: localStorage & sessionStorage, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox68 --- fixed
firefox69 --- fixed

People

(Reporter: janv, Assigned: janv)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Currently the shadow database can stay attached to the per origin database if something fails during the flush operation. This can cause various problems because other databases can't attach it, even the one that caused the error.

Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/36535c33a0c0
LSNG: Connection::FlushOp::DoDatastoreWork needs to automatically detach the shadow database on an error; r=asuth
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Comment on attachment 9070895 [details]
Bug 1558112 - LSNG: Connection::FlushOp::DoDatastoreWork needs to automatically detach the shadow database on an error; r=asuth

Beta/Release Uplift Approval Request

  • User impact if declined: Users may experience shutdown hangs caused by database connections with not detached shadow database.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change is simple. We just detach shadow database when there's an error during writing changes to disk.
  • String changes made/needed: None
Attachment #9070895 - Flags: approval-mozilla-beta?

Comment on attachment 9070895 [details]
Bug 1558112 - LSNG: Connection::FlushOp::DoDatastoreWork needs to automatically detach the shadow database on an error; r=asuth

lsng fix for 68.0b10

Attachment #9070895 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: