Bug 1558112 - LSNG: Connection::FlushOp::DoDatastoreWork needs to automatically detach the shadow database on an error; r=asuth a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D34311